#Fixed: Overflow X bug windows

--- a/client/src/app/components/video-room/video-room.component.scss
+++ b/client/src/app/components/video-room/video-room.component.scss
@@ -28,6 +28,7 @@
     .chat-output
     {
         overflow: scroll;
+        overflow-x: hidden;
         height: 33vh;
         background-color: black;
     }
@@ -69,6 +70,7 @@ input
     {
         width: 100%;
         overflow: scroll;
+        overflow-x: hidden;
         height: 33vh;
         background-color: black;
     }
